<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao" >
        </TextView>

        <TextView
            android:id="@+id/txtReceita"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescricao"
            android:text="@string/valor" >
        </TextView>

        <TextView
            android:id="@+id/txtData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtReceita"
            android:text="@string/data" />
    </RelativeLayout>

</LinearLayout>